--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 							<p>Configured and deployed AWS services.</p>
 							<p>Worked on GIT</p>
 							<p>Automated Jobs through Jenkins</p>
+							<ul class="actions special">
+								<li><a href="https://docs.google.com/document/d/1T7YccuEPp6-1R78zgX0TOEtpCr4s_BMsQigOqlBaTuU/edit?usp=sharing" class="button scrolly">Know More!</a></li>
+							</ul>
 						</div>
 					</div>
 				</div>
