--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<section id="header">
 				<div class="inner">
 					<h1>Hi, I'm <strong>Munmi Thakuria</strong>, a software engineer<br />
-					having experience of 5+ in the industry.</h1>
+					having experience of 5+ years in the industry.</h1>
 					<p>I worked as a DevOps Engineer in the Core Engineering Team.</p>
 					<ul class="actions special">
 						<li><a href="#two" class="button scrolly">Discover</a></li>
