--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 							<ul class="actions special">
 								<li><a href="https://docs.google.com/document/d/1T7YccuEPp6-1R78zgX0TOEtpCr4s_BMsQigOqlBaTuU/edit?usp=sharing" class="button scrolly">Know More!</a></li>
 							</ul>
+							<ul class="actions special">
+								<li><a href="#three" class="button scrolly">Projects</a></li>
+							</ul>
 						</div>
 					</div>
 				</div>
