--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Photon by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>My Portfolio</title>
@@ -81,6 +77,9 @@
 							<p>Developed an application to play quiz games where questions gets stored in a file along with answers and the question should be asked randomly. It is unlike the manual system where all the burdens were upon the quiz master.</p>
 							
 						</div>
+						<ul class="actions special">
+							<li><a href="#Footer" class="button scrolly">Contact ME!</a></li>
+						</ul>
 					</div>
 				</div>
 			</section>
