--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							
 						</div>
 						<ul class="actions special">
-							<li><a href="#Footer" class="button scrolly">Contact ME!</a></li>
+							<li><a href="#footer" class="button scrolly">Contact ME!</a></li>
 						</ul>
 					</div>
 				</div>
