--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<div class="inner">
 					<h1>Hi, I'm <strong>Munmi Thakuria</strong>, a software engineer<br />
 					having experience of 5+ years in the industry.</h1>
-					<p>I worked as a DevOps Engineer in the Core Engineering Team.</p>
+					<h4>I worked as a DevOps Engineer in the Core Engineering Team.</h4>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
