--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<h3>Quiz Master Game</h3>
-							<p>Developed an application to play quiz games where questions gets stored in a file along with answers and the question should be asked randomly. It is unlike the manual system where all the burdens were upon the quiz master.
+							<p>Developed an application to play quiz games where questions get stored in a file along with answers and the question should be asked randomly. It is unlike the manual system where all the burdens were upon the quiz master.
 							<br>Technology:C++</p>
 							
 						</div>
