--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<header class="major">
 							<h2>Publication</h2>
 						</header>
-						
+						<p> Paper was accepted at the 2024 IEEE International Conference on Big Data
 						
 					</div>
 					<div class="col-6 col-12-medium imp-medium">
