--- a/index.html
+++ b/index.html
@@ -4,157 +4,276 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional Portfolio">
-    <meta name="author" content="Your Name">
+    <meta name="description" content="Portfolio">
+    <meta name="author" content="Munmi Thakuria">
     <title>Your Name - Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.3/dist/tailwind.min.css" rel="stylesheet">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
+            background-color: #f7fafc;
+            color: #333;
+            line-height: 1.6;
+            background-image: url('images/pexels-apasaric-1619569.jpg');
+            background-size: cover;
+            background-position: center;
+            display: flex;
+        }
+
+        .sidebar {
+            width: 250px;
+            background-color: rgba(45, 55, 72, 0.8);
+            position: sticky;
+            top: 0;
+            height: 100vh;
+            padding-top: 2rem;
+            color: white;
+            font-size: 1.1rem;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            margin-right: 2rem;
+        }
+
+        .sidebar a {
+            color: white;
+            text-decoration: none;
+            padding: 1rem;
+            width: 100%;
+            transition: background-color 0.3s;
+        }
+
+        .sidebar a:hover {
+            background-color: #3182ce;
+        }
+
+        .content {
+            flex-grow: 1;
+            padding: 3rem 2rem;
+            width: 100%;
         }
 
         header {
-            background-color: #1f2937;
+            background-color: rgba(45, 55, 72, 0.7);
             color: white;
-            padding: 2rem 0;
+            padding: 3rem 0;
+            text-align: center;
         }
 
-        .container {
-            width: 80%;
-            margin: 0 auto;
+        header h1 {
+            font-size: 3rem;
+            font-weight: 700;
+        }
+
+        header p {
+            font-size: 1.2rem;
         }
 
         .section-title {
-            font-size: 1.5rem;
+            font-size: 1.8rem;
             margin-bottom: 1rem;
-        }
-
-        .skills, .projects {
-            margin-bottom: 2rem;
+            font-weight: 600;
         }
 
         .card {
-            background: #f9fafb;
-            padding: 1rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            background: #fff;
+            padding: 2rem;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
         }
 
         footer {
-            background-color: #f3f4f6;
+            background-color: #edf2f7;
             padding: 2rem 0;
             text-align: center;
+        }
+
+        .contact-form input,
+        .contact-form textarea {
+            width: 100%;
+            padding: 1rem;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            margin-bottom: 1rem;
+            font-size: 1rem;
+        }
+
+        .contact-form button {
+            background-color: #2b6cb0;
+            color: white;
+            padding: 1rem 2rem;
+            border-radius: 8px;
+            font-size: 1.2rem;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .contact-form button:hover {
+            background-color: #3182ce;
+        }
+
+        .social-icons a {
+            font-size: 2rem;
+            margin: 0 1rem;
+            color: #2d3748;
+            transition: color 0.3s ease;
+        }
+
+        .social-icons a:hover {
+            color: #3182ce;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                width: 90%;
+            }
+
+            .sidebar {
+                width: 100%;
+                position: relative;
+                height: auto;
+                padding-top: 1rem;
+            }
+
+            .content {
+                margin-left: 0;
+            }
         }
     </style>
 </head>
 
 <body>
-    <!-- Header Section -->
-    <header>
-        <div class="container text-center">
-            <h1 class="text-4xl font-bold">Your Name</h1>
-            <p class="text-lg">DevOps Engineer | Cloud Solutions | Automation Expert</p>
-        </div>
-    </header>
+    <div class="sidebar">
+        <a href="#about">About Me</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact Me</a>
+    </div>
 
-    <!-- About Section -->
-    <section id="about" class="container py-8">
-        <h2 class="section-title text-2xl">About Me</h2>
-        <p>
-            I have over 5+ years of experience in DevOps practices, automation, cloud services, and a strong academic background in computer science. In my previous role, I developed and implemented CI/CD pipelines for AWS components, migrated over 25 components from on-prem environments to AWS, and worked extensively with Docker, Kubernetes, and AWS services like EC2, S3, auto-scaling, and DynamoDB. 
-        </p>
-        <p>
-            I have worked with top US financial clients such as Bank of America, JP Morgan, Wells Fargo, Prudential, and Fidelity Investments during my time at Envestnet Yodlee. I later moved to TATA Consultancy Services (TCS), where I worked on large-scale cloud and automation projects.
-        </p>
-    </section>
+    <div class="content">
+        <!-- Header Section -->
+        <header>
+            <div class="container">
+                <h1>Your Name</h1>
+                <p>DevOps Engineer | Deep Learning Researcher | AI in Healthcare</p>
+            </div>
+        </header>
 
-    <!-- Skills Section -->
-    <section id="skills" class="container py-8">
-        <h2 class="section-title text-2xl">Skills</h2>
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-            <div class="card">
-                <h3 class="font-bold">Programming</h3>
-                <ul>
-                    <li>Python</li>
-                    <li>Bash</li>
-                    <li>Groovy</li>
-                    <li>Shell scripting</li>
-                </ul>
-            </div>
-            <div class="card">
-                <h3 class="font-bold">DevOps Tools</h3>
-                <ul>
-                    <li>Docker</li>
-                    <li>Kubernetes</li>
-                    <li>Jenkins</li>
-                    <li>GitLab</li>
-                    <li>CI/CD Framework</li>
-                </ul>
-            </div>
-            <div class="card">
-                <h3 class="font-bold">Cloud</h3>
-                <ul>
-                    <li>AWS (EC2, S3, DynamoDB)</li>
-                    <li>Auto-Scaling</li>
-                    <li>Cloud Migration</li>
-                </ul>
-            </div>
-            <div class="card">
-                <h3 class="font-bold">Databases</h3>
-                <ul>
-                    <li>SQL</li>
-                    <li>Redis</li>
-                    <li>MongoDB</li>
-                    <li>Oracle</li>
-                </ul>
-            </div>
-        </div>
-    </section>
+        <!-- About Section -->
+        <section id="about" class="container py-8">
+            <h2 class="section-title">About Me</h2>
+            <p>
+                I have over 5+ years of experience in DevOps practices, automation, cloud services, and a strong academic background in computer science. In my previous role, I developed and implemented CI/CD pipelines for AWS components, migrated over 25 components from on-prem environments to AWS, and worked extensively with Docker, Kubernetes, and AWS services like EC2, S3, auto-scaling, and DynamoDB.
+            </p>
+            <p>
+                I have worked with top US financial clients such as Bank of America, JP Morgan, Wells Fargo, Prudential, and Fidelity Investments during my time at Envestnet Yodlee. I later moved to TATA Consultancy Services (TCS), where I worked on large-scale cloud and automation projects.
+            </p>
+        </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="container py-8">
-        <h2 class="section-title text-2xl">Projects</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-            <div class="card">
-                <h3 class="font-bold">Interactive Web-based Quiz Application</h3>
-                <p>
-                    A web-based interactive quiz application, where the app generates questions along with four options based on the topics specified by the user. The questions are fetched dynamically from the OpenAI API. Developed using React, NodeJS, Tailwind CSS.
-                </p>
+        <!-- Skills Section -->
+        <section id="skills" class="container py-8">
+            <h2 class="section-title">Skills</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+                <div class="card">
+                    <h3 class="font-bold text-xl">Programming</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>Bash</li>
+                        <li>Groovy</li>
+                        <li>Shell scripting</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <h3 class="font-bold text-xl">DevOps Tools</h3>
+                    <ul>
+                        <li>Docker</li>
+                        <li>Kubernetes</li>
+                        <li>Jenkins</li>
+                        <li>GitLab</li>
+                        <li>CI/CD Framework</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <h3 class="font-bold text-xl">Cloud</h3>
+                    <ul>
+                        <li>AWS (EC2, S3, DynamoDB)</li>
+                        <li>Auto-Scaling</li>
+                        <li>Cloud Migration</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <h3 class="font-bold text-xl">Databases</h3>
+                    <ul>
+                        <li>SQL</li>
+                        <li>Redis</li>
+                        <li>MongoDB</li>
+                        <li>Oracle</li>
+                    </ul>
+                </div>
             </div>
-            <div class="card">
-                <h3 class="font-bold">Color Generator Website</h3>
-                <p>
-                    A user-friendly web application to generate and adjust color palettes for design use, developed with ReactJS and CSS. Users can preview and auto-adjust the colors' intensities and contrasts.
-                </p>
-            </div>
-            <div class="card">
-                <h3 class="font-bold">Hyper-spectral Image Classification</h3>
-                <p>
-                    A MATLAB project to classify satellite images using supervised machine learning algorithms. Developed an algorithm to extract relevant bands for classification and achieved high accuracy in identifying objects in hyper-spectral images.
-                </p>
-            </div>
-            <div class="card">
-                <h3 class="font-bold">Banking Management System</h3>
-                <p>
-                    Developed a banking management system using JavaScript for the frontend and MySQL for the backend. The system simplifies monitoring and reduces errors, minimizing the need for paperwork.
-                </p>
-            </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Publications Section -->
-    <section id="publications" class="container py-8">
-        <h2 class="section-title text-2xl">Publications</h2>
-        <p>
-            <a href="https://ieeexplore.ieee.org/abstract/document/10825434" target="_blank" class="text-blue-600">IEEE Big Data Conference 2024 - Diabetic Retinopathy Detection</a>
-        </p>
-    </section>
+        <!-- Projects Section -->
+        <section id="projects" class="container py-8">
+            <h2 class="section-title">Projects</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="card">
+                    <h3 class="font-bold text-xl">Interactive Web-based Quiz Application</h3>
+                    <p>
+                        A web-based interactive quiz application, where the app generates questions along with four options based on the topics specified by the user. The questions are fetched dynamically from the OpenAI API. Developed using React, NodeJS, Tailwind CSS.
+                    </p>
+                </div>
+                <div class="card">
+                    <h3 class="font-bold text-xl">Color Generator Website</h3>
+                    <p>
+                        A user-friendly web application to generate and adjust color palettes for design use, developed with ReactJS and CSS. Users can preview and auto-adjust the colors' intensities and contrasts.
+                    </p>
+                </div>
+                <div class="card">
+                    <h3 class="font-bold text-xl">Hyper-spectral Image Classification</h3>
+                    <p>
+                        A MATLAB project to classify satellite images using supervised machine learning algorithms. Developed an algorithm to extract relevant bands for classification and achieved high accuracy in identifying objects in hyper-spectral images.
+                    </p>
+                </div>
+                <div class="card">
+                    <h3 class="font-bold text-xl">Banking Management System</h3>
+                    <p>
+                        Developed a banking management system using JavaScript for the frontend and MySQL for the backend. The system simplifies monitoring and reduces errors, minimizing the need for paperwork.
+                    </p>
+                </div>
+            </div>
+        </section>
 
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
-    </footer>
+        <!-- Contact Me Section -->
+        <section id="contact" class="container py-8">
+            <h2 class="section-title">Contact Me</h2>
+            <form class="contact-form">
+                <input type="email" placeholder="munmithakuria14" required>
+                <textarea rows="5" placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </section>
+
+        <!-- Footer Section -->
+        <footer>
+            <div>
+                <h3>Follow Me</h3>
+                <div class="social-icons">
+                    <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" target="_blank">LinkedIn</a>
+                    <a href="https://github.com/munmithakuria" target="_blank">GitHub</a>
+                </div>
+            </div>
+            <p>&copy; 2025 Munmi Thakuria. All rights reserved.</p>
+        </footer>
+    </div>
 </body>
 
 </html>
