--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
     <div class="sidebar">
         <a href="#about">About Me</a>
         <a href="#skills">Skills</a>
+        <a href="#skills">Publications</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact Me</a>
     </div>
@@ -220,7 +221,27 @@
                 </div>
             </div>
         </section>
-
+    <section id="publications" class="container py-8">
+        <h2 class="section-title text-2xl">Publications</h2>
+        <p>
+            <a href="https://ieeexplore.ieee.org/abstract/document/10825434" target="_blank" class="text-blue-600">IEEE Big Data Conference 2024 - Diabetic Retinopathy Detection</a>
+        </p>
+    </section>
+    <section id="deep-learning" class="container py-8">
+    <h2 class="section-title">Research & Deep Learning Models</h2>
+    <p>
+        As part of my research, I have worked extensively with deep learning models, applying them to various healthcare-related projects. My experience with these models has enabled me to solve complex problems and achieve state-of-the-art results in image processing and classification tasks.
+    </p>
+    <p>
+        Below are some of the key models I have worked on:
+    </p>
+    <ul class="list-disc pl-5">
+        <li><strong>Convolutional Neural Networks (CNN)</strong> - Used for image classification and object detection in medical images.</li>
+        <li><strong>ResNet50</strong> - Applied for transfer learning in medical image datasets to extract meaningful features.</li>
+        <li><strong>VGG19</strong> - Fine-tuned for specific tasks, including medical image classification.</li>
+        <li><strong>Vision Transformer (ViT)</strong> - Used for cutting-edge image classification tasks, employing transformers for visual tasks.</li>
+    </ul>
+</section>    
         <!-- Projects Section -->
         <section id="projects" class="container py-8">
             <h2 class="section-title">Projects</h2>
