--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <!-- Header Section -->
         <header>
             <div class="container">
-                <h1>Your Name</h1>
+                <h1>Munmi Thakuria</h1>
                 <p>DevOps Engineer | Deep Learning Researcher | AI in Healthcare</p>
             </div>
         </header>
@@ -230,16 +230,16 @@
     <section id="deep-learning" class="container py-8">
     <h2 class="section-title">Research & Deep Learning Models</h2>
     <p>
-        As part of my research, I have worked extensively with deep learning models, applying them to various healthcare-related projects. My experience with these models has enabled me to solve complex problems and achieve state-of-the-art results in image processing and classification tasks.
+        As part of my research, I have worked extensively with deep learning models, applying them to various healthcare datasets My experience with these models has enabled me to solve complex problems and achieve state-of-the-art results in image processing and classification tasks.
     </p>
     <p>
         Below are some of the key models I have worked on:
     </p>
     <ul class="list-disc pl-5">
-        <li><strong>Convolutional Neural Networks (CNN)</strong> - Used for image classification and object detection in medical images.</li>
-        <li><strong>ResNet50</strong> - Applied for transfer learning in medical image datasets to extract meaningful features.</li>
-        <li><strong>VGG19</strong> - Fine-tuned for specific tasks, including medical image classification.</li>
-        <li><strong>Vision Transformer (ViT)</strong> - Used for cutting-edge image classification tasks, employing transformers for visual tasks.</li>
+        <li><strong>Convolutional Neural Networks (CNN)</strong> </li>
+        <li><strong>ResNet50</strong> </li>
+        <li><strong>VGG19</strong> </li>
+        <li><strong>Vision Transformer (ViT)</strong> </li>
     </ul>
 </section>    
         <!-- Projects Section -->
@@ -276,11 +276,13 @@
         <!-- Contact Me Section -->
         <section id="contact" class="container py-8">
             <h2 class="section-title">Contact Me</h2>
-            <form class="contact-form">
-                <input type="email" placeholder="munmithakuria14" required>
-                <textarea rows="5" placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
+            <ul class="list-none">
+                <li>
+                    <a href="mailto:munmithakuria14@gmail.com" class="text-blue-600 hover:text-blue-800">
+                        <i class="fas fa-envelope"></i> Email me
+                    </a>
+                </li>
+            </ul>
         </section>
 
         <!-- Footer Section -->
@@ -288,8 +290,8 @@
             <div>
                 <h3>Follow Me</h3>
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" target="_blank">LinkedIn</a>
-                    <a href="https://github.com/munmithakuria" target="_blank">GitHub</a>
+                    <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a>
+                    <a href="https://github.com/munmithakuria" class="icon brands alt fa-github"><span class="label">GitHub</span></a>
                 </div>
             </div>
             <p>&copy; 2025 Munmi Thakuria. All rights reserved.</p>
