--- a/index.html
+++ b/index.html
@@ -156,7 +156,6 @@
         <a href="#skills">Skills</a>
         <a href="#skills">Publications</a>
         <a href="#projects">Projects</a>
-        <a href="#contact">Contact Me</a>
     </div>
 
     <div class="content">
@@ -273,27 +272,19 @@
             </div>
         </section>
 
-        <!-- Contact Me Section -->
-        <section id="contact" class="container py-8">
-            <h2 class="section-title">Contact Me</h2>
-            <ul class="list-none">
-                <li>
-                    <a href="mailto:munmithakuria14@gmail.com" class="text-blue-600 hover:text-blue-800">
-                        <i class="fas fa-envelope"></i> Email me
-                    </a>
-                </li>
-            </ul>
-        </section>
+
+
 
         <!-- Footer Section -->
         <footer>
-            <div>
-                <h3>Follow Me</h3>
-                <div class="social-icons">
+        <section id="contact" class="container py-8">
+            <h2 class="section-title">Contact Me</h2>
+            <ul class="icons">
                     <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a>
                     <a href="https://github.com/munmithakuria" class="icon brands alt fa-github"><span class="label">GitHub</span></a>
-                </div>
-            </div>
+                    <li><a href="mailto:munmithakuria14@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+            </ul>
+        </section>
             <p>&copy; 2025 Munmi Thakuria. All rights reserved.</p>
         </footer>
     </div>
