--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             background-color: #f7fafc;
             color: #333;
             line-height: 1.6;
-            background-image: url('images/pexels-apasaric-1619569.jpg');
+            background-image: url('images/pexels-apasaric-325185.jpg');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -280,11 +280,24 @@
         <section id="contact" class="container py-8">
             <h2 class="section-title">Contact Me</h2>
             <ul class="icons">
-                    <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a>
-                    <a href="https://github.com/munmithakuria" class="icon brands alt fa-github"><span class="label">GitHub</span></a>
-                    <li><a href="mailto:munmithakuria14@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+                <li>
+                    <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" class="icon brands alt fa-linkedin">
+                    <span class="label">LinkedIn</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/munmithakuria" class="icon brands alt fa-github">
+                    <span class="label">GitHub</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="mailto:munmithakuria14@gmail.com" class="icon solid alt fa-envelope">
+                   <span class="label">Email</span>
+                    </a>
+                </li>
             </ul>
         </section>
+
             <p>&copy; 2025 Munmi Thakuria. All rights reserved.</p>
         </footer>
     </div>
