--- a/index.html
+++ b/index.html
@@ -275,28 +275,19 @@
 
 
 
-        <!-- Footer Section -->
-        <footer>
-        <section id="contact" class="container py-8">
-            <h2 class="section-title">Contact Me</h2>
-            <ul class="icons">
-                <li>
-                    <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" class="icon brands alt fa-linkedin">
-                    <span class="label">LinkedIn</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://github.com/munmithakuria" class="icon brands alt fa-github">
-                    <span class="label">GitHub</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="mailto:munmithakuria14@gmail.com" class="icon solid alt fa-envelope">
-                   <span class="label">Email</span>
-                    </a>
-                </li>
-            </ul>
-        </section>
+		<!-- Footer -->
+			<section id="footer">
+				<ul class="icons">
+					<li><a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/munmithakuria" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="mailto:munmithakuria14@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+				</ul><ul class="actions special">
+					<li><a href="https://docs.google.com/document/d/1T7YccuEPp6-1R78zgX0TOEtpCr4s_BMsQigOqlBaTuU/edit?usp=sharing" class="button scrolly">Know More!</a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</section>
 
             <p>&copy; 2025 Munmi Thakuria. All rights reserved.</p>
         </footer>
