--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Munmi Thakuria">
     <title>Munmi Thakuria</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.3/dist/tailwind.min.css" rel="stylesheet">
      <ul class="icons">
 	<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -153,6 +154,9 @@
         }
     </style>
 </head>
+ <head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+</head>
 
 <body>
     <div class="sidebar">
@@ -281,6 +285,7 @@
 
         <!-- Footer Section -->
         <footer>
+	
         <section id="contact" class="container py-8">
             <h2 class="section-title">Contact Me</h2>
             <ul class="icons">
