--- a/index.html
+++ b/index.html
@@ -226,7 +226,14 @@
                         <li>Oracle</li>
                     </ul>
                 </div>
-            </div>
+	        <div class="card">
+                    <h3 class="font-bold text-xl">Data Analytics</h3>
+            	    <ul>
+                	<li>Tableau</li>
+                	<li>R (Statistical Analysis)</li>
+            	    </ul>
+                </div>   
+                 </div>
         </section>
     <section id="publications" class="container py-8">
         <h2 class="section-title text-2xl">Publications</h2>
@@ -290,17 +297,17 @@
             <h2 class="section-title">Contact Me</h2>
             <ul class="icons">
                 <li>
-                    <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" class="icon brands alt fa-linkedin">
+                    <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" class="icon brands fa-linkedin">
                     <span class="label">LinkedIn</span>
                     </a>
                 </li>
                 <li>
-                    <a href="https://github.com/munmithakuria" class="icon brands alt fa-github">
+                    <a href="https://github.com/munmithakuria" class="icon brands fa-github">
                     <span class="label">GitHub</span>
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:munmithakuria14@gmail.com" class="icon solid alt fa-envelope">
+                    <a href="mailto:munmithakuria14@gmail.com" class="icon solid fa-envelope">
                    <span class="label">Email</span>
                     </a>
                 </li>
