--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </style>
 </head>
  <head>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -297,17 +297,17 @@
             <h2 class="section-title">Contact Me</h2>
             <ul class="icons">
                 <li>
-                    <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" class="icon brands fa-linkedin">
+                    <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" class="icon fa fa-linkedin">
                     <span class="label">LinkedIn</span>
                     </a>
                 </li>
                 <li>
-                    <a href="https://github.com/munmithakuria" class="icon brands fa-github">
+                    <a href="https://github.com/munmithakuria" class="icon fa fa-github">
                     <span class="label">GitHub</span>
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:munmithakuria14@gmail.com" class="icon solid fa-envelope">
+                    <a href="mailto:munmithakuria14@gmail.com" class="icon fa fa-github">
                    <span class="label">Email</span>
                     </a>
                 </li>
