--- a/index.html
+++ b/index.html
@@ -290,26 +290,27 @@
         <!-- Footer Section -->
         <footer>
 	
-        <section id="contact" class="container py-8">
-            <h2 class="section-title">Contact Me</h2>
-            <ul class="icons">
-                <li>
-                    <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" class="icon fa fa-linkedin">
-                    <span class="label">LinkedIn</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://github.com/munmithakuria" class="icon fa fa-github">
-                    <span class="label">GitHub</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="mailto:munmithakuria14@gmail.com" class="icon fa fa-github">
-                   <span class="label">Email</span>
-                    </a>
-                </li>
-            </ul>
-        </section>
+<section id="contact" class="container py-8">
+    <h2 class="section-title">Contact Me</h2>
+    <ul class="icons">
+        <li>
+            <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" class="icon fa fa-linkedin">
+                <span class="label">LinkedIn</span>
+            </a>
+        </li>
+        <li>
+            <a href="https://github.com/munmithakuria" class="icon fa fa-github">
+                <span class="label">GitHub</span>
+            </a>
+        </li>
+        <li>
+            <a href="mailto:munmithakuria14@gmail.com" class="icon fa fa-envelope">
+                <span class="label">Email</span>
+            </a>
+        </li>
+    </ul>
+</section>
+
 
             <p>&copy; 2025 Munmi Thakuria. All rights reserved.</p>
         </footer>
