--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Munmi Thakuria">
     <title>Munmi Thakuria</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.3/dist/tailwind.min.css" rel="stylesheet">
 
     <style>
@@ -151,9 +151,7 @@
         }
     </style>
 </head>
-<head>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-</head>
+
 
 <body>
     <div class="sidebar">
@@ -294,12 +292,12 @@
     <h2 class="section-title">Contact Me</h2>
     <ul class="icons">
         <li>
-            <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" class="icon fa fa-linkedin">
+            <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" class="icon brands fa-linkedin">
                 <span class="label">LinkedIn</span>
             </a>
         </li>
         <li>
-            <a href="https://github.com/munmithakuria" class="icon fa fa-github">
+            <a href="https://github.com/munmithakuria" class="icon brands fa-github">
                 <span class="label">GitHub</span>
             </a>
         </li>
