--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 </section>    
         <!-- Projects Section -->
         <section id="projects" class="container py-8">
-            <h2 class="section-title">Projects</h2>
+            <h2 class="section-title text-center">Projects</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="card">
                     <h3 class="font-bold text-xl">Interactive Web-based Quiz Application</h3>
