--- a/index.html
+++ b/index.html
@@ -292,7 +292,9 @@
     <h2 class="section-title">Contact Me</h2>
     <ul class="icons">
         <li>
-            <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" class="icon brands fa-linkedin">
+            <a href="https://www.linkedin.com/in/munmi-thakuria-95934812b/" class="icon brands fa fa-linkedin-square
+
+">
                 <span class="label">LinkedIn</span>
             </a>
         </li>
