--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             </a>
         </li>
         <li>
-            <a href="https://github.com/munmithakuria" class="icon brands fa-github">
+            <a href="https://github.com/munmithakuria" class="icon brands alt fa-github">
                 <span class="label">GitHub</span>
             </a>
         </li>
