--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Munmi Thakuria">
     <title>Munmi Thakuria</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.3/dist/tailwind.min.css" rel="stylesheet">
 
     <style>
@@ -298,7 +299,7 @@
             </a>
         </li>
         <li>
-            <a href="https://github.com/munmithakuria" class="icon brands alt fa-github">
+            <a href="https://github.com/munmithakuria" class="icon fa fa-github-square">
                 <span class="label">GitHub</span>
             </a>
         </li>
