--- a/index.html
+++ b/index.html
@@ -189,9 +189,8 @@
                     <h3 class="font-bold text-xl">Programming</h3>
                     <ul>
                         <li>Python</li>
-                        <li>Bash</li>
+                        <li>Bash / Shell Scripting</li>
                         <li>Groovy</li>
-                        <li>Shell scripting</li>
                     </ul>
                 </div>
                 <div class="card">
