--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                         <li>Python</li>
                         <li>Bash / Shell Scripting</li>
                         <li>Groovy</li>
+			<li>YAML</li>
                     </ul>
                 </div>
                 <div class="card">
@@ -227,7 +228,17 @@
                 	<li>R (Statistical Analysis)</li>
             	    </ul>
                 </div>   
-                 </div>
+	        <div class="card">
+            	    <h3 class="font-bold text-xl">Machine Learning Libraries</h3> <!-- Changed to Machine Learning Libraries -->
+                    <ul>
+               		 <li>TensorFlow</li>
+                	  <li>scikit-learn (sklearn)</li>
+                          <li>Matplotlib</li>
+                          <li>NumPy</li>
+                          <li>Pandas</li>
+                   </ul>
+                </div>
+               </div>
         </section>
     <section id="publications" class="container py-8">
         <h2 class="section-title text-2xl">Publications</h2>
