--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div class="sidebar">
         <a href="#about">About Me</a>
         <a href="#skills">Skills</a>
-        <a href="#skills">Publications</a>
+        <a href="#publications">Publications</a>
         <a href="#projects">Projects</a>
     </div>
 
