--- a/index.html
+++ b/index.html
@@ -277,6 +277,12 @@
                         A user-friendly web application to generate and adjust color palettes for design use, developed with ReactJS and CSS. Users can preview and auto-adjust the colors' intensities and contrasts.
                     </p>
                 </div>
+		<div class="card">
+                    <h3 class="font-bold text-xl">The visual exploration of Ottawa County Sheriff Incident Responses</h3>
+                    <p>
+                        Using Tableau, performed data visualization using real time sheriff incident responses of Ottawa County
+                    </p>
+                </div>
                 <div class="card">
                     <h3 class="font-bold text-xl">Hyper-spectral Image Classification</h3>
                     <p>
